# schema

./: Cargo.toml  README.md  example.json  package-lock.json
assets/: test.py
crates/: README.md
crates/draveur/: Cargo.toml
crates/draveur-python/: Cargo.toml
crates/draveur-python/src/: lib.rs  main.rs
crates/draveur-python/src/macros/: decorators.rs  functions.rs  mod.rs
crates/draveur-python/src/macros/control/: conditionals.rs  mod.rs
crates/draveur/src/: draveur.rs  errors.rs  lang.rs  lib.rs  parse.rs  types.rs
src/: crawl.rs  draveur.rs  errors.rs  lang.rs  lib.rs  macros.rs  main.rs  node.rs  parse.rs  render.rs
src/macros/: calls.rs  classes.rs  conditionals.rs  expr.rs  functions.rs  mod.rs  queries.rs
viewer/: index.html  package-lock.json  package.json  server.js
