[package]
name = "draveur"
version = "0.1.0"
edition = "2024"

[lib]
path = "./src/lib.rs"

[dependencies]
ignore = { version = "0.4.25", features=["simd-accel"] }
madvise = "0.1.0"
memmap2 = "0.9.9"
once_cell = "1.21.3"
ouroboros = "0.18.5"
streaming-iterator = "0.1.9"
tree-sitter = "0.24.7"
tree-sitter-graph = "0.12.0"
tree-sitter-python = "0.23"

# [profile.release]
# lto = "thin"
# codegen-units = 1
