[package]
name = "draveur"
version = "0.1.0"
edition = "2024"

[lib]
path = "./src/lib.rs"

[dependencies]
anyhow = "1.0.101"
ignore = { version = "0.4.25", features=["simd-accel"] }
madvise = "0.1.0"
memmap2 = "0.9.9"
ouroboros = "0.18.5"
roaring = "0.11.3"
serde = { version = "1.0.228", features=["derive"] }
serde_json = "1.0.149"
streaming-iterator = "0.1.9"
thiserror = "2.0.18"
thread_local = "1.1.9"
tree-sitter = "0.24.7"
tree-sitter-graph = "0.12.0"
tree-sitter-python = { version = "0.23", optional = true }

[features]
default = ["python"]
python = ["tree-sitter-python"]

# [profile.release]
# lto = "thin"
# codegen-units = 1
