[package]
name = "draveur-python"
version = "0.1.0"
edition = "2024"

[dependencies]
draveur = {path = "../draveur/"}
pyo3 = { version = "0.28.2", optional = true }
pyo3-stub-gen = { version = "0.19.0", optional = true }
serde_json = "1.0.149"
tree-sitter = "0.24.7"
tree-sitter-python = "0.23.0"

[features]
bindings = ["dep:pyo3", "dep:pyo3-stub-gen"]
extension-module = ["bindings", "pyo3/extension-module"]
